[package]
name = "postgres-proto-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A crate that helps you parse the postgres wire protocol"
repository = "https://github.com/zain-kabani/postgres-proto-rs/"
keywords = ["postgres", "postgres-protocol"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["net", "io-util"] }
num-derive = "0.3.3"
num-traits = "0.2"
log = "0.4.17"
